# cmake-test-middle

./: .gitmodules  CMakeLists.txt  arith.c  arith.h  test.c
